--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -8,9 +8,15 @@
 <div class="container">
 
 <!-- ============================ COMPONENT 1 ================================= -->
-
+{% if not cart_items %}
+<h2 class="text-center">Your shopping cart is Empty.</h2>
+	<hr>
+	<div class="text-center">
+		<a class="btn btn-primary" href="{% url 'store' %}">Continue Shopping</a>
+	</div>
+	{% else %}
 <div class="row">
-	<aside class="col-lg-9">
+	<aside class="col-lg-8">
 <div class="card">
 <table class="table table-borderless table-shopping-cart">
 <thead class="text-muted">
@@ -22,13 +28,20 @@
 </tr>
 </thead>
 <tbody>
+{% for cart_item in cart_items %}
 <tr>
 	<td>
 		<figure class="itemside align-items-center">
-			<div class="aside"><img src="{% static './images/items/11.jpg' %}" class="img-sm"></div>
+			<a href="{{ cart_item.product.get_url }}" class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></a>
 			<figcaption class="info">
-				<a href="#" class="title text-dark">Camera Canon EOS M50 Kit</a>
-				<p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p>
+				<a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name}}</a>
+				<p class="text-muted small">
+					{% if cart_item.variation.all %}
+						{% for item in cart_item.variation.all %}
+							{{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
+						{% endfor %}
+					{% endif %}
+				</p>
 			</figcaption>
 		</figure>
 	</td>
@@ -37,52 +50,60 @@
 					<div class="col">
 						<div class="input-group input-spinner">
 							<div class="input-group-prepend">
-							<button class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </button>
+							<a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
 							</div>
-							<input type="text" class="form-control"  value="1">
+							<input type="text" class="form-control"  value="{{ cart_item.quantity }}">
 							<div class="input-group-append">
-							<button class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </button>
+							<form action="{% url 'add_cart' cart_item.product.id %}" method="POST">
+								{% csrf_token %}
+								{% for item in cart_item.variation.all %}
+								<input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value|capfirst}}">
+								{% endfor %}
+								<button  class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
+							</form>
 							</div>
 						</div> <!-- input-group.// -->
 					</div> <!-- col.// -->
 	</td>
 	<td>
 		<div class="price-wrap">
-			<var class="price">$1156.00</var>
-			<small class="text-muted"> $315.20 each </small>
+			<var class="price">TK {{ cart_item.sub_total }}</var>
+			<small class="text-muted"> TK {{ cart_item.product.price }} </small>
 		</div> <!-- price-wrap .// -->
 	</td>
 	<td class="text-right">
-	<a href="" class="btn btn-danger"> Remove</a>
+	<a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure  you want to delete this item');" class="btn btn-danger"> Remove</a>
 	</td>
+
 </tr>
+{% endfor %}
 </tbody>
 </table>
 </div> <!-- card.// -->
 
 	</aside> <!-- col.// -->
-	<aside class="col-lg-3">
+	<aside class="col-lg-4">
 
 		<div class="card">
 		<div class="card-body">
 			<dl class="dlist-align">
 			  <dt>Total price:</dt>
-			  <dd class="text-right">$69.97</dd>
+			  <dd class="text-right">Tk {{ total }}</dd>
 			</dl>
 			<dl class="dlist-align">
 			  <dt>Tax:</dt>
-			  <dd class="text-right"> $10.00</dd>
+			  <dd class="text-right"> Tk {{ tax }}</dd>
 			</dl>
 			<dl class="dlist-align">
 			  <dt>Total:</dt>
-			  <dd class="text-right text-dark b"><strong>$59.97</strong></dd>
+			  <dd class="text-right text-dark b"><strong>Tk {{ grand_total }}</strong></dd>
 			</dl>
 			<hr>
 			<p class="text-center mb-3">
 				<img src="{% static './images/misc/payments.png' %}" height="26">
 			</p>
 			<a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
-			<a href="./store.html" class="btn btn-light btn-block">Continue Shopping</a>
+			<a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
 		</div> <!-- card-body.// -->
 		</div> <!-- card.// -->
 
@@ -90,6 +111,7 @@
 
 
 </div> <!-- row.// -->
+	{% endif %}
 <!-- ============================ COMPONENT 1 END .// ================================= -->
 
 </div> <!-- container .//  -->
